--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -38,7 +38,8 @@ $$Y(s) = sin\{30(\bar{s}-0.9)^4\}cos\{ 2(\bar{s}-0.9)\} + (\bar{s}-0.9)/2$$
 
 where $s = (s_x, s_y)^T \in R^2$ and $\bar{s}= \frac{s_x+s_y}{2}$. And the range of the coordinates are $[0,1]$ and there are 900 samples from the grid 30 by 30 in surface $[0,1]^2$. And here a three level multi-resolution model is used to generate the basis function, the basis are generated in the grid of 10 by 10, 19 by 19 and 37 by 37.
 ```{r}
-sim_coords <- expand.grid(seq(0,1,length.out = 30),seq(0,1,length.out = 30))
+sim_size = 50
+sim_coords <- expand.grid(seq(0,1,length.out = sim_size),seq(0,1,length.out = 50))
 sim_sbar <- (sim_coords[,1] + sim_coords[,2])/2
 sim_y <- sin(30*(sim_sbar-0.9)^4) * cos(2*(sim_sbar-0.9)) + (sim_sbar-0.9)/2
 p_obs <- 
@@ -67,11 +68,11 @@ By applying the likfit function, we can get the MLE of the estimation of the Mat
 ```{r}
 pair_dist_2d <- spDists( as.matrix(sim_coords) )
 set.seed(0)
-train_all_index <- sample(1:10, 900, replace = TRUE)
-krig_mean_all <- rep(NA, 900)
-dkrig_mean_all <- rep(NA, 900)
-ckrig_mean_all <- rep(NA, 900)
-nn_mean_all <- rep(NA, 900)
+train_all_index <- sample(1:10, sim_size^2, replace = TRUE)
+krig_mean_all <- rep(NA, sim_size^2)
+dkrig_mean_all <- rep(NA, sim_size^2)
+ckrig_mean_all <- rep(NA, sim_size^2)
+nn_mean_all <- rep(NA, sim_size^2)
 mse_vec_krig <- rep(NA, 10)
 mse_vec_nn <- rep(NA, 10)
 mse_vec_dkrig <- rep(NA, 10)
@@ -191,8 +192,6 @@ model_dk %>%
   
   layer_dense(units = 100, activation = 'relu') %>%
   
-  layer_dense(units = 100, activation = 'relu') %>%
-  
   layer_dense(units = 1, activation = 'linear')
 
 model_dk %>% compile(
@@ -209,7 +208,7 @@ model_dk %>% compile(
 )
  
 mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
+  fit(x = x_tr, y = train_y, epochs = 500, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
   model_dk %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
   dkrig_mean_all[-train_index] <- predict(model_dk, x_te)
@@ -316,6 +315,8 @@ cowplot::plot_grid(p_krig, p_dnn, p_dk, p_ck)
 
 mse_mat <- as.data.frame(cbind(mse_vec_krig, mse_vec_nn, mse_vec_dkrig, mse_vec_ckrig))
 write.csv(mse_mat, here::here("chen_simulation/mse_all_10_cv_2d.csv"), row.names = FALSE)
+mse_mat <- read.csv(here::here("chen_simulation/mse_all_10_cv_2d.csv"))
+mse_mean <- apply(mse_mat, 2, mean)
 ```
 
 
