--- a/chen_simulation/sim_2d.Rmd
+++ b/chen_simulation/sim_2d.Rmd
@@ -66,6 +66,27 @@ ggplot() +
   basis_fun_2 <- nychka_fun(basis_dist_2, theta = theta_2)
   basis_fun_3 <- nychka_fun(basis_dist_3, theta = theta_3)
   
+# Define deep learning function
+  deep_learning <- function(model, x_tr, y_tr, x_te, y_te, epoch_stop)
+  {
+    model %>% compile(
+    loss = "mse",
+    optimizer = optimizer_adam(),
+    metrics = list("mse")
+  )
+
+  model_checkpoint <- callback_model_checkpoint(
+  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
+  save_best_only = TRUE,
+  monitor = "val_loss",
+  mode = "min",
+  verbose = 1
+)
+  history <- model %>%
+  fit(x = x_tr, y = y_tr, epochs = epoch_stop, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, y_te))
+  model %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+  return(model)
+  }
 ```
 
 
@@ -98,7 +119,7 @@ for (curr_index in 1:10) {
   test_y <- sim_y[-train_index]
   
   # Change the population
-  curr_res <- likfit(coords = train_coords, data = train_y, ini.cov.pars = c(1,0.1), fix.kappa = FALSE, nugget = 0, fix.nugget = TRUE)
+  curr_res <- likfit(coords = train_coords, data = train_y, trend = train_y ~ train_coords[,1] + train_coords[,2],ini.cov.pars = c(1,0.1), fix.kappa = FALSE, nugget = 0, fix.nugget = TRUE)
   
   curr_beta <- curr_res$beta
   curr_sig <- curr_res$sigmasq
@@ -112,7 +133,8 @@ for (curr_index in 1:10) {
   exp_sig_12 <- cov_mat[train_index, -train_index]
   exp_sig_21 <- t(exp_sig_12)
   exp_sig_22 <- cov_mat[-train_index, -train_index]
-  krig_mean_all[-train_index] <- curr_beta + exp_sig_21 %*% solve(exp_sig_11) %*% matrix( as.numeric(train_y - curr_beta), ncol = 1 )
+  krig_mean_all[-train_index] <- as.matrix(cbind(1,test_coords))%*%matrix(curr_beta, ncol = 1) + exp_sig_21 %*% solve(exp_sig_11) %*% matrix( as.numeric(train_y - as.matrix(cbind(1,train_coords))%*%matrix(curr_beta, ncol = 1)), ncol = 1 )
+  
   mse_vec_krig[curr_index] <- mean((sim_y[-train_index] -
                                       krig_mean_all[-train_index])^2)
 }
@@ -120,6 +142,12 @@ for (curr_index in 1:10) {
 
 
 ```{r}
+  model_dnn <- keras_model_sequential()
+  model_dnn %>% 
+  layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(sim_coords)), kernel_initializer = 'he_uniform') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>%
+  layer_dense(units = 1, activation = 'linear')
 
 for (curr_index in 1:10) {
   train_index <- which(train_all_index != curr_index)
@@ -137,34 +165,10 @@ for (curr_index in 1:10) {
   # mse_epoch <- rep(NA, 200)
   # epoch_pred <- matrix(NA, nrow = 200, ncol = length(test_y))
   
-  model_dnn <- keras_model_sequential()
-  model_dnn %>% 
-  layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(x_tr)), kernel_initializer = 'he_uniform') %>% 
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_dense(units = 100, activation = 'relu') %>%
-  layer_dense(units = 1, activation = 'linear')
-
-  model_dnn %>% compile(
-    loss = "mse",
-    optimizer = optimizer_adam(),
-    metrics = list("mse")
-  )
-
-  model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
-  save_best_only = TRUE,
-  monitor = "val_loss",
-  mode = "min",
-  verbose = 1
-)
-  dnn_history <- model_dnn %>%
-  fit(x = x_tr, y = y_tr, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_dnn %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+  curr_model <- deep_learning(model_dnn, x_tr, y_tr, x_te, y_te, epoch_stop = 200)
   
-
-  nn_mean_all[-train_index] <- predict(model_dnn, x_te)
-  mse_vec_nn[curr_index] <- evaluate(model_dnn, x_te, y_te)[2]
-
+  nn_mean_all[-train_index] <- predict(curr_model, x_te)
+  mse_vec_nn[curr_index] <- evaluate(curr_model, x_te, y_te)[2]
 }
 
 
@@ -172,6 +176,17 @@ for (curr_index in 1:10) {
 
 
 ```{r}
+  
+model_dk <- keras_model_sequential()
+model_dk %>% 
+  layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(cbind(train_coords, basis_fun_1[train_index,],
+                basis_fun_2[train_index,],basis_fun_3[train_index,]))), kernel_initializer = 'he_uniform') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
+  
+  layer_dense(units = 100, activation = 'relu') %>%
+  
+  layer_dense(units = 1, activation = 'linear')
+
 for (curr_index in 1:10) {
   train_index <- which(train_all_index != curr_index)
   train_coords <- sim_coords[train_index,]
@@ -190,35 +205,12 @@ for (curr_index in 1:10) {
   x_te <- array_reshape( as.matrix(x_te), c(length(test_y), ncol(x_tr))) 
   
   
-  
-model_dk <- keras_model_sequential()
-model_dk %>% 
-  layer_dense(units = 100, activation = 'relu', input_shape = c(ncol(x_tr)), kernel_initializer = 'he_uniform') %>% 
-  layer_dense(units = 100, activation = 'relu') %>% 
-  
-  layer_dense(units = 100, activation = 'relu') %>%
-  
-  layer_dense(units = 1, activation = 'linear')
+curr_model <- deep_learning(model_dk, x_tr, train_y, x_te, test_y, epoch_stop = 200)
 
-model_dk %>% compile(
-  loss = "mse",
-  optimizer = optimizer_adam(),
-  metrics = list("mse")
-)
- model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
-  save_best_only = TRUE,
-  monitor = "val_loss",
-  mode = "min",
-  verbose = 1
-)
- 
-mod_train_dk <- model_dk %>%
-  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_dk %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+
   
-  dkrig_mean_all[-train_index] <- predict(model_dk, x_te)
-  mse_vec_dkrig[curr_index] <- evaluate(model_dk, x_te, test_y)[2]
+  dkrig_mean_all[-train_index] <- predict(curr_model, x_te)
+  mse_vec_dkrig[curr_index] <- evaluate(curr_model, x_te, test_y)[2]
   
 
 }
@@ -229,19 +221,6 @@ mod_train_dk <- model_dk %>%
 
 
 ```{r}
-for (curr_index in 1:10) {
-  train_index <- which(train_all_index != curr_index)
-  train_coords <- sim_coords[train_index,]
-  train_y <- sim_y[train_index]
-  test_coords <- sim_coords[-train_index,]
-  test_y <- sim_y[-train_index]
-  
-  basis_tr <- basis_fun_3[train_index,]
-  basis_te <- basis_fun_3[-train_index,]
-  
-  x_tr <- array_reshape(basis_tr, c(nrow(basis_tr), 37, 37, 1))
-  x_te <- array_reshape(basis_te, c(nrow(basis_te), 37, 37, 1))
-  
   input_shape <- c(37, 37, 1)
 
 
@@ -267,18 +246,27 @@ model_ck %>% compile(
   metrics = list("mse")
 )
 
- model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
-  save_best_only = TRUE,
-  monitor = "val_loss",
-  mode = "min",
-  verbose = 1
-)
-mod_train_ck <- model_ck %>%
-  fit(x = x_tr, y = train_y, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, test_y))
-  model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
-ckrig_mean_all[-train_index] <- predict(model_ck, x_te)
-  mse_vec_ckrig[curr_index] <- evaluate(model_ck, x_te, test_y)[2]
+
+
+
+for (curr_index in 1:10) {
+  train_index <- which(train_all_index != curr_index)
+  train_coords <- sim_coords[train_index,]
+  train_y <- sim_y[train_index]
+  test_coords <- sim_coords[-train_index,]
+  test_y <- sim_y[-train_index]
+  
+  basis_tr <- basis_fun_3[train_index,]
+  basis_te <- basis_fun_3[-train_index,]
+  
+  x_tr <- array_reshape(basis_tr, c(nrow(basis_tr), 37, 37, 1))
+  x_te <- array_reshape(basis_te, c(nrow(basis_te), 37, 37, 1))
+  
+
+
+ curr_model <- deep_learning(model_ck, x_tr, train_y, x_te, test_y, epoch_stop = 200)
+ ckrig_mean_all[-train_index] <- predict(model_ck, x_te)
+ mse_vec_ckrig[curr_index] <- evaluate(model_ck, x_te, test_y)[2]
   
 }  
   
@@ -289,25 +277,34 @@ p_krig <-
   ggplot() +
   geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = krig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude", color = "")
+  labs(x = "Longitude",  y = "Latitude", color = "") + 
+  ggtitle("Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
+  
   
 p_dnn <- 
   ggplot() +
   geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = nn_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude") + 
+  ggtitle("DNN") +
+  theme(plot.title = element_text(hjust = 0.5))
   
 p_dk <- 
   ggplot() +
   geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = dkrig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude") + 
+  ggtitle("Deep Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
 
 p_ck <- 
     ggplot() +
   geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = ckrig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude") + 
+  ggtitle("Convolutional Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
 
 ```
 
@@ -331,6 +328,11 @@ mse_mean <- apply(mse_mat, 2, mean)
 ```{r}
 ggplot() +
   geom_boxplot(data = reshape2::melt(mse_mat), aes(x = variable, y = value)) +
+   coord_flip()
+
+
+ggplot() +
+  geom_boxplot(data = reshape2::melt(mse_mat[,-1]), aes(x = variable, y = value)) +
    coord_flip()
 ```
 
