--- a/Qi_simulation/Qi's 2d Simulation.Rmd
+++ b/Qi_simulation/Qi's 2d Simulation.Rmd
@@ -340,46 +340,113 @@ for (bee2 in 1:5) {
 
 
 ```{r}
+
+# mse_mat <- as.data.frame(cbind(mse_vec_krig, mse_vec_nn, mse_vec_dkrig, mse_vec_ckrig))
+# pred_mat <- as.data.frame(cbind(krig_mean_all, nn_mean_all,dkrig_mean_all, ckrig_mean_all))
+# write.csv(mse_mat, here::here("Qi_simulation/eh_mse_all_10_cv_2d.csv"), row.names = FALSE)
+# write.csv(pred_mat, here::here("Qi_simulation/eh_prediction_2d.csv"), row.names = FALSE)
+
+mse_all <- read.csv(here::here("Qi_simulation/eh_mse_all_10_cv_2d.csv"))
+pred_all <- read.csv(here::here("Qi_simulation/eh_prediction_2d.csv"))
+
+
+```
+
+```{r}
+sim_size <- 100
+
+egg_fun <- function(x,y){
+  out <- -(y + 47)*sin(sqrt(abs(x/2 + y + 47))) - x*sin(sqrt(abs(x-(y + 47))))
+}
+
+sim_x1 = sim_x2 <- seq(from = -1000, to = 1000, length.out = sim_size)
+
+sim_y <- as.vector(outer(X = sim_x1, Y = sim_x2, FUN = Vectorize(egg_fun)))
+  
+sim_coords <- expand.grid(sim_x1, sim_x2)
+
+krig_mean_all <- as.matrix(pred_all[,1])
+nn_mean_all <- as.matrix(pred_all[,2])
+dkrig_mean_all <- as.matrix(pred_all[,3])
+ckrig_mean_all <- as.matrix(pred_all[,4])
+
+
 p_krig <-
   ggplot() +
-  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - krig_mean_all)) +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = krig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude", color = "")
+  labs(x = "Longitude",  y = "Latitude", color = "") +
+  ggtitle("Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
   
 p_dnn <- 
   ggplot() +
-  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - nn_mean_all)) +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = nn_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("DNN") +
+  theme(plot.title = element_text(hjust = 0.5))
   
 p_dk <- 
   ggplot() +
-  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - dkrig_mean_all)) +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = dkrig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("Deep Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
 
 p_ck <- 
     ggplot() +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = ckrig_mean_all)) +
+  scale_fill_viridis_c(name = "") + 
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("Convolutional Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
+
+
+diff_krig <-
+  ggplot() +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - krig_mean_all)) +
+  scale_fill_viridis_c(name = "") + 
+  labs(x = "Longitude",  y = "Latitude", color = "")+
+  ggtitle("Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
+  
+diff_dnn <- 
+  ggplot() +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - nn_mean_all)) +
+  scale_fill_viridis_c(name = "") + 
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("DNN") +
+  theme(plot.title = element_text(hjust = 0.5))
+  
+diff_dk <- 
+  ggplot() +
+  geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - dkrig_mean_all)) +
+  scale_fill_viridis_c(name = "") + 
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("Deep Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
+
+diff_ck <- 
+    ggplot() +
   geom_raster(aes(x = sim_coords[,1], y = sim_coords[,2], fill = sim_y - ckrig_mean_all)) +
   scale_fill_viridis_c(name = "") + 
-  labs(x = "Longitude",  y = "Latitude")
+  labs(x = "Longitude",  y = "Latitude")+
+  ggtitle("Convolutional Kriging") +
+  theme(plot.title = element_text(hjust = 0.5))
 
 
-sqrt(mean((krig_mean_all - sim_y)^2))
-sqrt(mean((nn_mean_all - sim_y)^2))
-sqrt(mean((dkrig_mean_all - sim_y)^2))
-sqrt(mean((ckrig_mean_all - sim_y)^2))
+
+
 cowplot::plot_grid(p_krig, p_dnn, p_dk, p_ck)
+cowplot::plot_grid(diff_krig, diff_dnn, diff_dk, diff_ck)
+```
 
-
-
-mse_mat <- as.data.frame(cbind(mse_vec_krig, mse_vec_nn, mse_vec_dkrig, mse_vec_ckrig))
-pred_mat <- as.data.frame(cbind(krig_mean_all, nn_mean_all,dkrig_mean_all, ckrig_mean_all))
-write.csv(mse_mat, here::here("Qi_simulation/eh_mse_all_10_cv_2d.csv"), row.names = FALSE)
-write.csv(pred_mat, here::here("Qi_simulation/eh_prediction_2d.csv"), row.names = FALSE)
-
-mse_all <- read.csv(here::here("Qi_simulation/eh_mse_all_10_cv_2d.csv"))
-
+```{r}
+ggplot() +
+  geom_boxplot(data = reshape2::melt(mse_all), aes(x = variable, y = value)) +
+   coord_flip()
 ```
 
 
