--- a/chen_pm/pm_small/pm.rmd
+++ b/chen_pm/pm_small/pm.rmd
@@ -77,33 +77,33 @@ states = c("Alabama", "Arizona", "Arkansas", "California", "Colorado", "Connecti
             "West Virginia", "Wisconsin", "Wyoming", "Washington")
 
 # 
-# coords <- cbind(long, lat)
-# x.res <- 500
-# y.res <- 500
-# surf <- mba.surf(cbind(coords, pm), no.X = x.res, no.Y = y.res, h = 5, m = 2, extend = TRUE)$xyz.est
-# 
-# all_inside <- NULL
-# exp_grid <- expand.grid(surf$x, surf$y)
-# for (i in 1:length(states)) {
-#   tem = spBayes::pointsInPoly(as.matrix(map_data("state", region = states[i])[,1:2]),as.matrix(exp_grid))
-#   all_inside <- unique(c(all_inside, tem))
-#   
-# }
-# obs_pm <- surf$z[all_inside] 
-# obs_long <-  as.matrix(exp_grid)[all_inside,1]
-# obs_lat <-  as.matrix(exp_grid)[all_inside,2]
-# p1 <- 
-# ggplot() +
-#   geom_contour_filled(aes(x = obs_long, y = obs_lat, z = obs_pm))+
-#    geom_path(data = us_map, aes(x = long, y = lat, group = group), color = "red")
-# p2 <- 
-# ggplot() +
-#   geom_path(data = us_map, aes(x = long, y = lat, group = group), color = "red") + 
-#   geom_point(aes(x = long, y = lat, color = pm)) +
-#   scale_color_viridis_c()
-# 
-# p1
-# p2
+coords <- cbind(long, lat)
+x.res <- 500
+y.res <- 500
+surf <- mba.surf(cbind(coords, pm), no.X = x.res, no.Y = y.res, h = 5, m = 2, extend = TRUE)$xyz.est
+
+all_inside <- NULL
+exp_grid <- expand.grid(surf$x, surf$y)
+for (i in 1:length(states)) {
+  tem = spBayes::pointsInPoly(as.matrix(map_data("state", region = states[i])[,1:2]),as.matrix(exp_grid))
+  all_inside <- unique(c(all_inside, tem))
+
+}
+obs_pm <- surf$z[all_inside]
+obs_long <-  as.matrix(exp_grid)[all_inside,1]
+obs_lat <-  as.matrix(exp_grid)[all_inside,2]
+p1 <-
+ggplot() +
+  geom_contour_filled(aes(x = obs_long, y = obs_lat, z = obs_pm))+
+   geom_path(data = us_map, aes(x = long, y = lat, group = group), color = "red")
+p2 <-
+ggplot() +
+  geom_path(data = us_map, aes(x = long, y = lat, group = group), color = "red") +
+  geom_point(aes(x = long, y = lat, color = pm)) +
+  scale_color_viridis_c()
+
+p1
+p2
 
 ```
 # Basis Function Generation
@@ -387,8 +387,8 @@ mod_train_ck <- model_ck %>% fit(
 )
 
 model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
- 
- loss_ck <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te), pm[-train_index])
+
+ loss_ck <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te), pm[-train_index])[2]
 ```
 
 
@@ -420,6 +420,13 @@ nngp_pred <- apply(cv_curr_pred, 1, mean)
 loss_nngp <- mean((nngp_pred - pm_te)^2)
 ```
 
+```{r}
+loss_ck
+
+loss_dk
+
+loss_nngp
+```
 
 
 
